Fix UI ScrollBar without affecting looks of search-wrapper.

--- a/src/less/import/search.less
+++ b/src/less/import/search.less
@@ -7,7 +7,7 @@
   -webkit-box-pack: center;
   -webkit-box-align: center;
   display: -webkit-box;
-  padding: 0 10px;
+  padding: 0 25px 0 15px;
 
   .inner{
     min-width: 400px;
